--- a/MASTER GYM/SRC_MOTEL/WEB_MOTEL/WebContent/faces/motel/room/room-dialog.xhtml
+++ b/MASTER GYM/SRC_MOTEL/WEB_MOTEL/WebContent/faces/motel/room/room-dialog.xhtml
@@ -30,7 +30,7 @@
                                 </p:selectOneMenu>
                                 <label class="title-elem">#{msg['home.homeName']} *</label>
                             </span>
-                            <p:message for="statusId"/>
+                            <p:message for="homeId"/>
                         </div>
                         <div class=" Container50">
                             <span class="md-inputfield">
