--- a/MASTER GYM/SRC_MOTEL/WEB_MOTEL/WebContent/faces/motel/bill/showPdf-dialog.xhtml
+++ b/MASTER GYM/SRC_MOTEL/WEB_MOTEL/WebContent/faces/motel/bill/showPdf-dialog.xhtml
@@ -7,7 +7,7 @@
                 >
 
 
-    <p:dialog modal="true" header="Vé dịch vụ" widgetVar="showPdfDlg" width="80%" id="showPdfDlgId" height="550px">
+    <p:dialog modal="true" header="Phiếu thanh toán" widgetVar="showPdfDlg" width="80%" id="showPdfDlgId" height="550px">
 
         <h:form id="showPdfForm">
 
