--- a/Git/WebMotel/src/main/webapp/faces/catUser/catUser-index.xhtml
+++ b/Git/WebMotel/src/main/webapp/faces/catUser/catUser-index.xhtml
@@ -82,7 +82,7 @@
                                 <div class="Container25 MarTop30">
                                     <span class="title-top">
                                         <p:selectOneMenu id="statusId" value="#{catUserController.currCatUser.status}"
-                                                         required="true" style="width: 71%" scrollHeight="100"
+                                                         required="true" style="width: 71%" height="100"
                                                          requiredMessage="#{msg['common.required'].replace('{0}',msg['catUser.status'])}"
                                         >
                                             <f:selectItem itemValue="" itemLabel="#{msg['label.choose']}"
